--- a/index.html
+++ b/index.html
@@ -1,21 +1,96 @@
-<!doctype html>
-<html lang="nl">
-	
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2223</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>SP</title>
+    <script src="javascript.js"></script>
 </head>
 
-<body>
-	<h1>Howdy FED2223</h1>
 
-	<script defer src="scripts/script.js"></script>
+
+<body>
+
+
+    <header>
+
+        <a href=#> <img src=/images/logo.png> </a>
+
+        <nav>https://codepen.io/shooft/pen/bGvxPmP
+            <button aria-hidden="true"><img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg"
+                    alt="Menu" />Menu</button>
+
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>APPROACH</li>
+                <li>PORTFOLIO</li>
+                <li>NETWORK</li>
+                <li>MONDIALITE</li>
+                <li>NEWS</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img src="Images/home-mast.jpg" alt="Building front">
+            <h3>Representing the world's finest real estate</h3>
+        </section>
+
+
+
+        <section>
+            <h3>THE EVOLVING WORLD OF LUXURY LIVING</h3>
+            <hr>
+            <p>On the surface our story is deceptively simple, but exactly how we give it life is highly sophisticated.
+                Collaborating with our extraordinary developer clientele, we create desire and demand for luxury real
+                estate
+                in the great financial, social, cultural and recreational capitals of the world. Like the world class
+                architects and designers they select, this new wave of developers is dedicated to crafting the most
+                geometrically inspiring and emotionally moving structures imaginable. Our role is to market those
+                residences
+                to discerning buyers and to help guide developer, architect and buyer alike in an evolving world of
+                luxury
+                living.</p>
+        </section>
+
+
+        <section>
+
+            <ul>
+                <li>
+                    <h4>PARCEL F</h4>
+                </li>
+
+                <article>
+                    <h5>FIRST LIGHT</h5>
+                </article>
+
+                <article>
+                    <h5>THE BUTTERFLY</h5>
+                </article>
+
+                <article>
+                    <h5>PACIFIC GATE</h5>
+                </article>
+            </ul>
+        </section>
+
+        <section>
+            <h4>SEE MORE PROJECTS</h4>
+        </section>
+
+        <section>
+            <h3>MONDIALITE</h3>
+            <hr>
+            <p>Mondialité is our online gateway to a global dialogue in architecture, design, real estate innovation and
+                the philosophy of luxury living.</p>
+        </section>
+    </main>
 </body>
-	
+
 </html>
